--- a/musicbingo_verify/package.json
+++ b/musicbingo_verify/package.json
@@ -2,7 +2,7 @@
   "name": "musicbingo_verify",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://WilliamStumpel.github.io/musicbingo",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
